<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/troy_black_logo" >

   

    <Button
        android:id="@+id/student_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_search"
        android:onClick="sendMessage"
        android:text="@string/stusearchbutton"
        android:background="@drawable/btn_red" 
        style="@style/ButtonText" />

    <Button
        android:id="@+id/shuttle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/arrow_right"
        android:onClick="sendMessage"
        android:text="@string/shuttlebutton"
        android:background="@drawable/btn_red" 
        style="@style/ButtonText" />

    <Button
        android:id="@+id/maps_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/arrow_right"
        android:onClick="sendMessage"
        android:text="@string/mapsbutton"
        android:background="@drawable/btn_red" 
        style="@style/ButtonText" />
    

    <Button
        android:id="@+id/catalog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/arrow_right"
        android:onClick="sendMessage"
        android:text="@string/catalogbutton"
        android:background="@drawable/btn_red" 
        style="@style/ButtonText" />

    <Button
        android:id="@+id/calendar_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/arrow_right"
        android:onClick="sendMessage"
        android:text="@string/calendarbutton"
        android:background="@drawable/btn_red" 
        style="@style/ButtonText" />
    
     <Button
        android:id="@+id/alert_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/search_app"
        android:drawableLeft="@drawable/ic_menu_search"
        android:background="@drawable/btn_red" 
        style="@style/ButtonText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal" >

        <ImageButton
            android:id="@+id/bb_button"
            style="?android:attr/buttonStyleSmall"
            android:background="@drawable/btn_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bb_logo" />
            
        <ImageButton
            android:id="@+id/email_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/email_logo"
            android:background="@drawable/btn_red" />

        <ImageButton
            android:id="@+id/webexpr_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/webexpr_logo"
			android:background="@drawable/btn_red" />
    </LinearLayout>

</LinearLayout>